--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,118 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/nameTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:textColor="?attr/colorOnBackground"
-        android:textSize="28sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@id/genderImageView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Morty Smith" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/aliveTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="?attr/colorOnBackground"
-        android:textSize="16sp"
-        android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="@id/nameTextView"
-        app:layout_constraintTop_toBottomOf="@id/nameTextView"
-        tools:text="Alive" />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/genderImageView"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/nameTextView"
-        tools:srcCompat="@drawable/ic_male_24" />
-
-
-<!--    <View-->
-<!--        android:id="@+id/divider"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="1dp"-->
-<!--        android:layout_marginTop="12dp"-->
-<!--        android:background="?colorPrimary"-->
-<!--        app:layout_constraintEnd_toEndOf="@id/genderImageView"-->
-<!--        app:layout_constraintStart_toStartOf="@id/aliveTextView"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/aliveTextView" />-->
-
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cardView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        app:cardElevation="4dp"
-        app:cardCornerRadius="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/aliveTextView">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/headerImageView"
-            android:layout_width="220dp"
-            android:layout_height="220dp"
-            android:scaleType="centerCrop"
-            tools:src="@tools:sample/backgrounds/scenic[5]" />
-
-    </com.google.android.material.card.MaterialCardView>
-
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/originLabelTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Origin"
-        android:textColor="?attr/colorOnBackground"
-        android:textSize="24sp"
-        android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="@id/aliveTextView"
-        app:layout_constraintTop_toBottomOf="@id/cardView" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/originTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="?attr/colorOnBackground"
-        android:textSize="18sp"
-        android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="@id/originLabelTextView"
-        app:layout_constraintTop_toBottomOf="@id/originLabelTextView"
-        tools:text="Earth" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/speciesLabelTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Species"
-        android:textColor="?attr/colorOnBackground"
-        android:textSize="24sp"
-        android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="@id/originTextView"
-        app:layout_constraintTop_toBottomOf="@id/originTextView" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/speciesTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="?attr/colorOnBackground"
-        android:textSize="18sp"
-        android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="@id/speciesLabelTextView"
-        app:layout_constraintTop_toBottomOf="@id/speciesLabelTextView"
-        tools:text="Human" />
-
+    <com.airbnb.epoxy.EpoxyRecyclerView
+        android:id="@+id/epoxyRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingBottom="24dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
