--- a/app/src/main/res/layout/model_character_list_title.xml
+++ b/app/src/main/res/layout/model_character_list_title.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardBackgroundColor="#E4E4E4"
+    app:cardBackgroundColor="@color/header_color"
     app:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
