--- a/app/src/main/res/layout/activity_character_detail.xml
+++ b/app/src/main/res/layout/activity_character_detail.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingBottom="24dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/model_character_details_header" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
