--- a/app/src/main/res/layout/activity_character_list.xml
+++ b/app/src/main/res/layout/activity_character_list.xml
@@ -13,6 +13,7 @@
         app:itemSpacing="8dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
-        tools:itemCount="12" />
+        tools:itemCount="12"
+        tools:listitem="@layout/model_character_list_item"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
