--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,14 +9,25 @@
         android:id="@+id/characterListFragment"
         android:name="com.example.rickandmorty.CharacterListFragment"
         android:label="fragment_character_list"
-        tools:layout="@layout/activity_character_list" >
+        tools:layout="@layout/activity_character_list">
         <action
             android:id="@+id/action_characterListFragment_to_characterDetailFragment"
-            app:destination="@id/characterDetailFragment" />
+            app:destination="@id/characterDetailFragment">
+            <argument
+                android:name="charactedId"
+                app:argType="integer" />
+
+        </action>
     </fragment>
     <fragment
         android:id="@+id/characterDetailFragment"
         android:name="com.example.rickandmorty.CharacterDetailFragment"
         android:label="fragment_character_detail"
-        tools:layout="@layout/activity_character_detail" />
+        tools:layout="@layout/activity_character_detail">
+        <argument
+            android:name="charactedId"
+            android:defaultValue="-1"
+            app:argType="integer" />
+
+    </fragment>
 </navigation>
