Add deeplink support using nav graph

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,6 +28,8 @@
         android:name="com.example.rickandmorty.CharacterDetailFragment"
         android:label="fragment_character_detail"
         tools:layout="@layout/fragment_character_detail">
+
+        <deepLink app:uri="https://rickandmorty.com/character/{characterId}"/>
         <argument
             android:name="charactedId"
             android:defaultValue="-1"
