Add appbar support

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/characterListFragment"
         android:name="com.example.rickandmorty.CharacterListFragment"
-        android:label="fragment_character_list"
+        android:label="Rick and Morty Characters"
         tools:layout="@layout/fragment_character_list">
         <action
             android:id="@+id/action_characterListFragment_to_characterDetailFragment"
@@ -26,7 +26,7 @@
     <fragment
         android:id="@+id/characterDetailFragment"
         android:name="com.example.rickandmorty.CharacterDetailFragment"
-        android:label="fragment_character_detail"
+        android:label="Character Details"
         tools:layout="@layout/fragment_character_detail">
 
         <deepLink app:uri="https://rickandmorty.com/character/{characterId}"/>
