--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,6 +23,7 @@
 
         </action>
     </fragment>
+
     <fragment
         android:id="@+id/characterDetailFragment"
         android:name="com.example.rickandmorty.CharacterDetailFragment"
@@ -35,5 +36,24 @@
             android:defaultValue="-1"
             app:argType="integer" />
 
+    </fragment>
+
+    <fragment
+        android:id="@+id/episodeListFragment"
+        android:name="com.example.rickandmorty.EpisodesListFragment"
+        android:label="Rick and Morty Episodes"
+        tools:layout="@layout/fragment_episode_list">
+<!--        <action-->
+<!--            android:id="@+id/action_characterListFragment_to_characterDetailFragment"-->
+<!--            app:destination="@id/characterDetailFragment"-->
+<!--            app:enterAnim="@anim/slide_in_from_right"-->
+<!--            app:exitAnim="@anim/slide_out_to_left"-->
+<!--            app:popExitAnim="@anim/slide_out_to_right"-->
+<!--            app:popEnterAnim="@anim/slide_in_from_left">-->
+<!--            <argument-->
+<!--                android:name="charactedId"-->
+<!--                app:argType="integer" />-->
+
+<!--        </action>-->
     </fragment>
 </navigation>
