--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="header_color">#1C1B1F</color>
+    <color name="drawer_header_icon_color">@color/purple_200</color>
 </resources>
