--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/characterListFragment"
-        android:name="com.example.rickandmorty.CharacterListFragment"
+        android:name="com.example.rickandmorty.characters.CharacterListFragment"
         android:label="Rick and Morty Characters"
         tools:layout="@layout/fragment_character_list">
         <action
@@ -26,7 +26,7 @@
 
     <fragment
         android:id="@+id/characterDetailFragment"
-        android:name="com.example.rickandmorty.CharacterDetailFragment"
+        android:name="com.example.rickandmorty.characters.detail.CharacterDetailFragment"
         android:label="Character Details"
         tools:layout="@layout/fragment_character_detail">
 
@@ -40,7 +40,7 @@
 
     <fragment
         android:id="@+id/episodeListFragment"
-        android:name="com.example.rickandmorty.EpisodesListFragment"
+        android:name="com.example.rickandmorty.episodes.EpisodesListFragment"
         android:label="Rick and Morty Episodes"
         tools:layout="@layout/fragment_episode_list">
 <!--        <action-->
