--- a/app/src/main/res/layout/model_episode_carousel_item.xml
+++ b/app/src/main/res/layout/model_episode_carousel_item.xml
@@ -14,7 +14,7 @@
         android:layout_height="80dp">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/episodeTextView"
+            android:id="@+id/episodeNumberTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="4dp"
