--- a/app/src/main/res/layout/model_character_details_header.xml
+++ b/app/src/main/res/layout/model_character_details_header.xml
@@ -36,6 +36,7 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/nameTextView"
+        app:tint="?colorOnSurface"
         tools:srcCompat="@drawable/ic_male_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
