--- a/app/src/main/res/layout/model_character_details_image.xml
+++ b/app/src/main/res/layout/model_character_details_image.xml
@@ -1,28 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cardView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/headerImageView"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
         android:layout_marginTop="32dp"
-        app:cardElevation="4dp"
-        app:cardCornerRadius="16dp"
+        android:elevation="10dp"
+        android:padding="1dp"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/headerImageView"
-            android:layout_width="220dp"
-            android:layout_height="220dp"
-            android:scaleType="centerCrop"
-            tools:src="@tools:sample/backgrounds/scenic[5]" />
-
-    </com.google.android.material.card.MaterialCardView>
+        app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.RickAndMorty"
+        app:strokeColor="?colorOnSurface"
+        app:strokeWidth="1dp"
+        tools:src="@tools:sample/backgrounds/scenic[5]" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
