--- a/app/src/main/res/layout/fragment_episode_detail.xml
+++ b/app/src/main/res/layout/fragment_episode_detail.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?colorSurface">
+    android:background="?colorSurface"
+    android:paddingBottom="48dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/episodeNumberTextView"
@@ -58,17 +59,17 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:text="Characters"
         android:textColor="?colorOnSurface"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@id/episodeNameTextView"
-        app:layout_constraintTop_toBottomOf="@id/episodeNameTextView"
-        tools:text="Characters" />
+        app:layout_constraintTop_toBottomOf="@id/episodeNameTextView" />
 
     <com.airbnb.epoxy.EpoxyRecyclerView
         android:id="@+id/epoxyRecyclerView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="220dp"
         android:layout_marginTop="4dp"
         android:orientation="horizontal"
         android:paddingHorizontal="16dp"
